force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>Used to Store the Question Value</description>
    <label>Form Element</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Form Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>