force-app/main/default/objects/Question__c/fields/Always_Visible__c.field-meta.xml
<CustomField>
    <fullName>Always_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is created initially for Telco. It is used to determine whether the question is always visible or dependent on answers on other question</description>
    <label>Always Visible</label>
    <type>Checkbox</type>
</CustomField>