force-app/main/default/objects/Question__c/fields/Count_Answers__c.field-meta.xml
<CustomField>
    <fullName>Count_Answers__c</fullName>
    <label>Count Answers</label>
    <summaryForeignKey>Answer__c.Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>