force-app/main/default/objects/Question__c/fields/Data_type__c.field-meta.xml
<CustomField>
    <fullName>Data_type__c</fullName>
    <label>Data type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>address-lookup</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>checkbox-group</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>hidden</fullName>
            </value>
            <value>
                <fullName>label</fullName>
            </value>
            <value>
                <fullName>lookup</fullName>
            </value>
            <value>
                <fullName>multipicklist</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>rating</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>input-table</fullName>
            </value>
            <value>
                <fullName>section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>