force-app/main/default/objects/Question__c/fields/Display_Summary__c.field-meta.xml
<CustomField>
    <fullName>Display_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>display the summary at Recommendation page</inlineHelpText>
    <label>Display Summary</label>
    <type>Checkbox</type>
</CustomField>