force-app/main/default/objects/Question__c/fields/Do_not_display_label__c.field-meta.xml
<CustomField>
    <fullName>Do_not_display_label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not display label</label>
    <type>Checkbox</type>
</CustomField>