force-app/main/default/objects/Question__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <description>This field can be used to display a link to open an external web page. Usage : &lt;a href=&quot;http://www.google.com&quot;&gt;ClickHere&lt;/a&gt;</description>
    <inlineHelpText>This field can be used to display a link to open an external web page. Usage : &lt;a href=&quot;http://www.google.com&quot;&gt;ClickHere&lt;/a&gt;</inlineHelpText>
    <label>External Link</label>
    <type>TextArea</type>
</CustomField>