force-app/main/default/objects/Question__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check if you want use this question as a filter</inlineHelpText>
    <label>Filter</label>
    <type>Checkbox</type>
</CustomField>