force-app/main/default/objects/Question__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>