force-app/main/default/objects/Question__c/fields/Is_Track__c.field-meta.xml
<CustomField>
    <fullName>Is_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if the field is track by analytics</description>
    <inlineHelpText>Define if the field is track by analytics</inlineHelpText>
    <label>Is Track</label>
    <type>Checkbox</type>
</CustomField>