force-app/main/default/objects/Question__c/fields/JSON_Name__c.field-meta.xml
<CustomField>
    <fullName>JSON_Name__c</fullName>
    <label>JSON Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>