force-app/main/default/objects/Question__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process_Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Quote</fullName>
                <default>true</default>
                <label>Initial Quote</label>
            </value>
            <value>
                <fullName>Final Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>