force-app/main/default/objects/Question__c/fields/Related_Question__c.field-meta.xml
<CustomField>
    <fullName>Related_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Nested to a Question</inlineHelpText>
    <label>Related Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>