force-app/main/default/objects/Question__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check if this question is required</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>