force-app/main/default/objects/Question__c/fields/ToolTip__c.field-meta.xml
<CustomField>
    <fullName>ToolTip__c</fullName>
    <inlineHelpText>Tooltip to display on web</inlineHelpText>
    <label>ToolTip</label>
    <type>TextArea</type>
</CustomField>