force-app/main/default/objects/Question__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <defaultValue>&#39;true&#39;</defaultValue>
    <inlineHelpText>Set the visibility on the basis of other&#39;s questions answer. e.g.display this question if the answer of security alarm is yes (&#39;%security_alarm%&#39;==&#39;yes&#39;)</inlineHelpText>
    <label>Visibility Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>